syntax = "proto3";

package user;

import "health.proto";
import "paginated.proto";


service UserService {
  rpc GetUsers(paginated.PaginatedRequest) returns (GetUsersResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetCustomers(paginated.PaginatedRequestWithOrg) returns (GetUsersResponse);
  rpc GetCustomer(GetCustomerRequest) returns (GetUserResponse);
  rpc GetHealth(health.GetHealthRequest) returns (health.GetHealthResponse);
}



message GetUsersResponse {
    repeated GetUserResponse users = 1;
    int32 total_count = 2;
    int32 page = 3;
    optional int32  next_cursor = 4;
}

message GetUserRequest {
    string user_id = 1;
}

message GetCustomerRequest {
    string user_id = 1;
    string org_id = 2;
}

message GetUserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    string created_at = 4;
    string updated_at = 5;
}


